# P2C-Transpiler

./: .gitignore  CMakeLists.txt  LICENSE  readme.md
include/: ast.h  code_generation.h  parser.h  parser.tab.h  symbol.h  symbol_table.h  type.h
src/: ast.cc  code_generation.cc  lex.l  lex.yy.cc  main.cc  parser.tab.cc  parser.y  symbol.cc  type.cc
